renamed:    16. Linear Data Structures/The List ADT.ipynb -> 16. Linear Data Structures/Linear ADTs.ipynb

--- a/16. Linear Data Structures/Linear ADTs.ipynb
+++ b/16. Linear Data Structures/Linear ADTs.ipynb
@@ -27,7 +27,7 @@
     }
    },
    "source": [
-    "## The \"List\" Abstract Data Type\n",
+    "## Linear Abstract Data Types\n",
     "---"
    ]
   },
@@ -103,7 +103,7 @@
     }
    },
    "source": [
-    "Interfaces in C# construct a frame (contract) for their implementations – classes.    \n",
+    "Interfaces in $C\\#$ construct a frame (contract) for their implementations – classes.    \n",
     "   \n",
     "This contract consists of **a set of methods and properties**, which\n",
     "each class must implement in order to implement the interface."
