modified:   16. Linear Data Structures/Linear ADTs.ipynb new file:   16. Linear Data Structures/_img/ArrayBasedList.png new file:   16. Linear Data Structures/_img/LinkedList.png new file:   16. Linear Data Structures/_img/Stack.jpg

--- a/16. Linear Data Structures/Linear ADTs.ipynb
+++ b/16. Linear Data Structures/Linear ADTs.ipynb
@@ -88,7 +88,44 @@
     }
    },
    "source": [
-    "### Introducing the `System.Collections.IList` Interface"
+    "### The \"List\" ADT"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<table style=\"margin-left: auto; margin-right: auto;\">\n",
+    "    <tbody>\n",
+    "    <tr style = \"display: block; margin: auto;\">\n",
+    "        <td  style=\"border: none;\"><img src=\"_img/ArrayBasedList.png\" style=\"\"></img></td>\n",
+    "        <td style=\"border: none;\"><img src=\"_img/LinkedList.png\" style=\"width: 500px;\"></img></td>\n",
+    "    </tr>\n",
+    "    </tbody>\n",
+    "</table>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Introducing the `System.Collections.IList` Interface"
    ]
   },
   {
@@ -146,6 +183,128 @@
     "- `int IndexOf(object)` – returns the position of the element \n",
     "- `this[int]` – indexer, allows access to the elements on a set position"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### The \"Stack\" ADT"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<img src=\"_img/Stack.jpg\" style=\"display: block; margin: auto; width: 400px;\"></img>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "In programming the **Stack** is a commonly used data structure used internally by the $.\\,NET$ **virtual machine (CLR)** for keeping the variables of the program and the parameters of the called methods (it is called the **program execution stack**)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The **Stack** is a data structure which implements the behavior **\"last in – first out\" (LIFO)**, meaning that Stack elements can be added and removed only via the **top** of the stack.  \n",
+    "\n",
+    "As such, the **Stack ADT** provides **3 major operations**: \n",
+    "- `Push(object)` - add an element at the top of the stack\n",
+    "- `Pop()`  - take the last added element from the top of the stack\n",
+    "- `peek()` - get the element form the top of the stack without removing it"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### The \"Queue\" ADT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": []
   }
  ],
  "metadata": {
@@ -168,6 +327,7 @@
      },
      {
       "aliases": [],
+      "languageName": null,
       "name": ".NET"
      },
      {
@@ -207,13 +367,26 @@
      },
      {
       "aliases": [],
+      "languageName": null,
       "name": "value"
      },
      {
       "aliases": [
        "frontend"
       ],
+      "languageName": null,
       "name": "vscode"
+     },
+     {
+      "aliases": [
+       "js"
+      ],
+      "languageName": "JavaScript",
+      "name": "javascript"
+     },
+     {
+      "aliases": [],
+      "name": "webview"
      }
     ]
    }
