modified:   16. Linear Data Structures/Linear ADTs.ipynb new file:   16. Linear Data Structures/_img/Queue.jpg

--- a/16. Linear Data Structures/Linear ADTs.ipynb
+++ b/16. Linear Data Structures/Linear ADTs.ipynb
@@ -200,6 +200,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {
@@ -280,6 +294,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {
@@ -295,6 +323,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
@@ -304,7 +333,61 @@
      "kernelName": "csharp"
     }
    },
-   "source": []
+   "source": [
+    "<img src=\"_img/Queue.jpg\" style=\"display: block; margin: auto; width: 400px;\"></img>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The **Queue** is created to model real-world queues, for example a queue of waiting for printing documents, waiting processes to access a common resource, and others. In **Queues** we can **add elements only on the back** and **retrieve elements only at the front**."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The Queue structure implements the behavior **\"first in – first out\" (FIFO)**.   \n",
+    "     \n",
+    "Elements **added** to the queue are **appended at the end** of the queue, and when elements are **extracted**, they are **taken from the beginning** of the queue (in the order they were added). \n",
+    "   \n",
+    "Thus the queue behaves like a **list with two ends** (head and tail)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "As such, the **Queue ADT** provides **3 major operations**: \n",
+    "- `Enqueue(object)` - add an element at the top of the Queue\n",
+    "- `Dequeue()`  - take the oldest added element from the start of the Queue\n",
+    "- `Peek()` - retrieves the older element from the Queue without removing it"
+   ]
   }
  ],
  "metadata": {
