modified:   16. Linear Data Structures/Linear ADTs.ipynb new file:   16. Linear Data Structures/_img/LinkedQueue.png new file:   16. Linear Data Structures/_img/LinkedStack.png

--- a/16. Linear Data Structures/Linear ADTs.ipynb
+++ b/16. Linear Data Structures/Linear ADTs.ipynb
@@ -240,7 +240,14 @@
     }
    },
    "source": [
-    "<img src=\"_img/Stack.jpg\" style=\"display: block; margin: auto; width: 400px;\"></img>"
+    "<table style=\"margin-left: auto; margin-right: auto;\">\n",
+    "    <tbody>\n",
+    "    <tr style = \"display: block; margin: auto;\">\n",
+    "        <td  style=\"border: none;\"><img src=\"_img/Stack.jpg\" style=\"width: 390px;\"></img></td>\n",
+    "        <td style=\"border: none;\"><img src=\"_img/LinkedStack.png\" style=\"width: 500px;\"></img></td>\n",
+    "    </tr>\n",
+    "    </tbody>\n",
+    "</table>"
    ]
   },
   {
@@ -334,7 +341,14 @@
     }
    },
    "source": [
-    "<img src=\"_img/Queue.jpg\" style=\"display: block; margin: auto; width: 400px;\"></img>"
+    "<table style=\"margin-left: auto; margin-right: auto;\">\n",
+    "    <tbody>\n",
+    "    <tr style = \"display: block; margin: auto;\">\n",
+    "        <td  style=\"border: none;\"><img src=\"_img/Queue.jpg\" style=\"width: 440px;\"></img></td>\n",
+    "        <td style=\"border: none;\"><img src=\"_img/LinkedQueue.png\" style=\"width: 450px;\"></img></td>\n",
+    "    </tr>\n",
+    "    </tbody>\n",
+    "</table>"
    ]
   },
   {
@@ -365,7 +379,6 @@
    },
    "source": [
     "The Queue structure implements the behavior **\"first in – first out\" (FIFO)**.   \n",
-    "     \n",
     "Elements **added** to the queue are **appended at the end** of the queue, and when elements are **extracted**, they are **taken from the beginning** of the queue (in the order they were added). \n",
     "   \n",
     "Thus the queue behaves like a **list with two ends** (head and tail)."
