modified:   16. Linear Data Structures/Linear ADTs.ipynb

--- a/16. Linear Data Structures/Linear ADTs.ipynb
+++ b/16. Linear Data Structures/Linear ADTs.ipynb
@@ -104,12 +104,18 @@
    },
    "source": [
     "<table style=\"margin-left: auto; margin-right: auto;\">\n",
-    "    <tbody>\n",
-    "    <tr style = \"display: block; margin: auto;\">\n",
-    "        <td  style=\"border: none;\"><img src=\"_img/ArrayBasedList.png\" style=\"\"></img></td>\n",
-    "        <td style=\"border: none;\"><img src=\"_img/LinkedList.png\" style=\"width: 500px;\"></img></td>\n",
+    "    <tr>\n",
+    "        <th>\n",
+    "            Static (Array-Based)\n",
+    "        </th>\n",
+    "        <th>\n",
+    "            Dynamic (Linked)\n",
+    "        </th>\n",
     "    </tr>\n",
-    "    </tbody>\n",
+    "    <tr>\n",
+    "        <td  style=\"border: none;\"><img src=\"_img/ArrayBasedList.png\" style=\"width: 400px;\"></img></td>\n",
+    "        <td style=\"border: none;\"><img src=\"_img/LinkedList.png\" style=\"width: 580px;\"></img></td>\n",
+    "    </tr>\n",
     "</table>"
    ]
   },
@@ -241,12 +247,18 @@
    },
    "source": [
     "<table style=\"margin-left: auto; margin-right: auto;\">\n",
-    "    <tbody>\n",
-    "    <tr style = \"display: block; margin: auto;\">\n",
+    "    <tr>\n",
+    "        <th>\n",
+    "            Static (Array-based)\n",
+    "        </th>\n",
+    "        <th>\n",
+    "            Dynamic (Linked)\n",
+    "        </th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
     "        <td  style=\"border: none;\"><img src=\"_img/Stack.jpg\" style=\"width: 390px;\"></img></td>\n",
     "        <td style=\"border: none;\"><img src=\"_img/LinkedStack.png\" style=\"width: 500px;\"></img></td>\n",
     "    </tr>\n",
-    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -342,12 +354,18 @@
    },
    "source": [
     "<table style=\"margin-left: auto; margin-right: auto;\">\n",
-    "    <tbody>\n",
-    "    <tr style = \"display: block; margin: auto;\">\n",
+    "    <tr>\n",
+    "        <th>\n",
+    "            Static (Array-based)\n",
+    "        </th>\n",
+    "        <th>\n",
+    "            Dynamic (Linked)\n",
+    "        </th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
     "        <td  style=\"border: none;\"><img src=\"_img/Queue.jpg\" style=\"width: 440px;\"></img></td>\n",
     "        <td style=\"border: none;\"><img src=\"_img/LinkedQueue.png\" style=\"width: 450px;\"></img></td>\n",
     "    </tr>\n",
-    "    </tbody>\n",
     "</table>"
    ]
   },
