modified:   16. Linear Data Structures/Linear ADTs.ipynb

--- a/16. Linear Data Structures/Linear ADTs.ipynb
+++ b/16. Linear Data Structures/Linear ADTs.ipynb
@@ -294,7 +294,7 @@
     "As such, the **Stack ADT** provides **3 major operations**: \n",
     "- `Push(object)` - add an element at the top of the stack\n",
     "- `Pop()`  - take the last added element from the top of the stack\n",
-    "- `peek()` - get the element form the top of the stack without removing it"
+    "- `Peek()` - get the element form the top of the stack without removing it"
    ]
   },
   {
