modified:   16. Linear Data Structures/Built-In Classes/The Generic List Class.ipynb new file:   16. Linear Data Structures/Built-In Classes/The Stack Class.ipynb

--- a/16. Linear Data Structures/Built-In Classes/The Generic List Class.ipynb
+++ b/16. Linear Data Structures/Built-In Classes/The Generic List Class.ipynb
@@ -2404,6 +2404,11 @@
       ],
       "languageName": null,
       "name": "vscode"
+     },
+     {
+      "aliases": [],
+      "languageName": "SQL",
+      "name": "sql"
      }
     ]
    }
