odified:   16. Linear Data Structures/Built-In Classes/The LinkedList and LinkedListNode Classes.ipynb

--- a/16. Linear Data Structures/Built-In Classes/The LinkedList and LinkedListNode Classes.ipynb
+++ b/16. Linear Data Structures/Built-In Classes/The LinkedList and LinkedListNode Classes.ipynb
@@ -1965,6 +1965,18 @@
      {
       "aliases": [],
       "name": "csharp"
+     },
+     {
+      "aliases": [],
+      "languageName": "KQL",
+      "name": "kql"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "languageName": null,
+      "name": "vscode"
      }
     ]
    }
