new file:   16. Linear Data Structures/Built-In Classes/The Queue and Priority Queue Classes.ipynb modified:   16. Linear Data Structures/Built-In Classes/The Stack Class.ipynb

--- a/16. Linear Data Structures/Built-In Classes/The Stack Class.ipynb
+++ b/16. Linear Data Structures/Built-In Classes/The Stack Class.ipynb
@@ -59,7 +59,9 @@
     }
    },
    "source": [
-    "Stacks and queues are useful when you need temporary storage for information; that is, when you might want to discard an element after retrieving its value. Use `Queue<T>` if you need to access the information in the same order that it is stored in the collection. Use `Stack<T>` if you need to access the information in **reverse order**."
+    "Stacks and queues are useful when you need temporary storage for information; that is, when you might want to discard an element after retrieving its value. \n",
+    "   \n",
+    "Use `Stack<T>` if you need to access the information in **reverse order**."
    ]
   },
   {
