modified:   16. Linear Data Structures/Built-In Classes/The Queue and Priority Queue Classes.ipynb

--- a/16. Linear Data Structures/Built-In Classes/The Queue and Priority Queue Classes.ipynb
+++ b/16. Linear Data Structures/Built-In Classes/The Queue and Priority Queue Classes.ipynb
@@ -768,6 +768,51 @@
     "        \t</tr>\n",
     "\t</tbody></table>"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Instantiation and Example Usage"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### `Queue<T>`"
+   ]
   }
  ],
  "metadata": {
