modified:   16. Linear Data Structures/Built-In Classes/The Queue and Priority Queue Classes.ipynb

--- a/16. Linear Data Structures/Built-In Classes/The Queue and Priority Queue Classes.ipynb
+++ b/16. Linear Data Structures/Built-In Classes/The Queue and Priority Queue Classes.ipynb
@@ -539,35 +539,65 @@
     }
    },
    "source": [
-    "<table class=\"nameValue table table-sm table-stacked-mobile\" aria-label=\"Table 2\">\n",
+    "<table class=\"nameValue table table-sm table-stacked-mobile\" aria-label=\"Table 1\">\n",
     "        \t<tbody><tr>\n",
     "\t  <td class=\"is-one-third-width-tablet\">\n",
     "\t<span class=\"break-text\">\n",
-    "\t\t<a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.priorityqueue-2.comparer?view=net-7.0#system-collections-generic-priorityqueue-2-comparer\" data-linktype=\"relative-path\">Comparer</a>\n",
+    "\t\t<a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.priorityqueue-2.-ctor?view=net-7.0#system-collections-generic-priorityqueue-2-ctor\" data-linktype=\"relative-path\">Priority<wbr>Queue&lt;TElement,TPriority&gt;()</a>\n",
     "\t</span>\n",
     "</td>\n",
     "\t<td class=\"summary\"> \n",
-    "\t\t<p>Gets the priority comparer used by the <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.priorityqueue-2?view=net-7.0\" data-linktype=\"relative-path\">PriorityQueue&lt;TElement,TPriority&gt;</a>.</p>\n",
+    "\t\t<p>Initializes a new instance of the <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.priorityqueue-2?view=net-7.0\" data-linktype=\"relative-path\">PriorityQueue&lt;TElement,TPriority&gt;</a> class.</p>\n",
     "\t</td>\n",
     "        \t</tr>\n",
     "        \t<tr>\n",
     "\t  <td class=\"is-one-third-width-tablet\">\n",
     "\t<span class=\"break-text\">\n",
-    "\t\t<a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.priorityqueue-2.count?view=net-7.0#system-collections-generic-priorityqueue-2-count\" data-linktype=\"relative-path\">Count</a>\n",
+    "\t\t<a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.priorityqueue-2.-ctor?view=net-7.0#system-collections-generic-priorityqueue-2-ctor(system-collections-generic-icomparer((-1)))\" data-linktype=\"relative-path\">Priority<wbr>Queue&lt;TElement,TPriority&gt;(IComparer&lt;TPriority&gt;)</a>\n",
     "\t</span>\n",
     "</td>\n",
     "\t<td class=\"summary\"> \n",
-    "\t\t<p>Gets the number of elements contained in the <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.priorityqueue-2?view=net-7.0\" data-linktype=\"relative-path\">PriorityQueue&lt;TElement,TPriority&gt;</a>.</p>\n",
+    "\t\t<p>Initializes a new instance of the <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.priorityqueue-2?view=net-7.0\" data-linktype=\"relative-path\">PriorityQueue&lt;TElement,TPriority&gt;</a> class with the specified custom priority comparer.</p>\n",
     "\t</td>\n",
     "        \t</tr>\n",
     "        \t<tr>\n",
     "\t  <td class=\"is-one-third-width-tablet\">\n",
     "\t<span class=\"break-text\">\n",
-    "\t\t<a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.priorityqueue-2.unordereditems?view=net-7.0#system-collections-generic-priorityqueue-2-unordereditems\" data-linktype=\"relative-path\">Unordered<wbr>Items</a>\n",
+    "\t\t<a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.priorityqueue-2.-ctor?view=net-7.0#system-collections-generic-priorityqueue-2-ctor(system-collections-generic-ienumerable((system-valuetuple((-0-1)))))\" data-linktype=\"relative-path\">Priority<wbr>Queue&lt;TElement,TPriority&gt;(IEnumerable&lt;Value<wbr>Tuple&lt;TElement,TPriority&gt;&gt;)</a>\n",
     "\t</span>\n",
     "</td>\n",
     "\t<td class=\"summary\"> \n",
-    "\t\t<p>Gets a collection that enumerates the elements of the queue in an unordered manner.</p>\n",
+    "\t\t<p>Initializes a new instance of the <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.priorityqueue-2?view=net-7.0\" data-linktype=\"relative-path\">PriorityQueue&lt;TElement,TPriority&gt;</a> class that is populated with the specified elements and priorities.</p>\n",
+    "\t</td>\n",
+    "        \t</tr>\n",
+    "        \t<tr>\n",
+    "\t  <td class=\"is-one-third-width-tablet\">\n",
+    "\t<span class=\"break-text\">\n",
+    "\t\t<a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.priorityqueue-2.-ctor?view=net-7.0#system-collections-generic-priorityqueue-2-ctor(system-collections-generic-ienumerable((system-valuetuple((-0-1))))-system-collections-generic-icomparer((-1)))\" data-linktype=\"relative-path\">Priority<wbr>Queue&lt;TElement,TPriority&gt;(IEnumerable&lt;Value<wbr>Tuple&lt;TElement,TPriority&gt;&gt;, IComparer&lt;TPriority&gt;)</a>\n",
+    "\t</span>\n",
+    "</td>\n",
+    "\t<td class=\"summary\"> \n",
+    "\t\t<p>Initializes a new instance of the <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.priorityqueue-2?view=net-7.0\" data-linktype=\"relative-path\">PriorityQueue&lt;TElement,TPriority&gt;</a> class that is populated with the specified elements and priorities, and with the specified custom priority comparer.</p>\n",
+    "\t</td>\n",
+    "        \t</tr>\n",
+    "        \t<tr>\n",
+    "\t  <td class=\"is-one-third-width-tablet\">\n",
+    "\t<span class=\"break-text\">\n",
+    "\t\t<a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.priorityqueue-2.-ctor?view=net-7.0#system-collections-generic-priorityqueue-2-ctor(system-int32)\" data-linktype=\"relative-path\">Priority<wbr>Queue&lt;TElement,TPriority&gt;(Int32)</a>\n",
+    "\t</span>\n",
+    "</td>\n",
+    "\t<td class=\"summary\"> \n",
+    "\t\t<p>Initializes a new instance of the <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.priorityqueue-2?view=net-7.0\" data-linktype=\"relative-path\">PriorityQueue&lt;TElement,TPriority&gt;</a> class with the specified initial capacity.</p>\n",
+    "\t</td>\n",
+    "        \t</tr>\n",
+    "        \t<tr>\n",
+    "\t  <td class=\"is-one-third-width-tablet\">\n",
+    "\t<span class=\"break-text\">\n",
+    "\t\t<a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.priorityqueue-2.-ctor?view=net-7.0#system-collections-generic-priorityqueue-2-ctor(system-int32-system-collections-generic-icomparer((-1)))\" data-linktype=\"relative-path\">Priority<wbr>Queue&lt;TElement,TPriority&gt;(Int32, IComparer&lt;TPriority&gt;)</a>\n",
+    "\t</span>\n",
+    "</td>\n",
+    "\t<td class=\"summary\"> \n",
+    "\t\t<p>Initializes a new instance of the <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.priorityqueue-2?view=net-7.0\" data-linktype=\"relative-path\">PriorityQueue&lt;TElement,TPriority&gt;</a> class with the specified initial capacity and custom priority comparer.</p>\n",
     "\t</td>\n",
     "        \t</tr>\n",
     "\t</tbody></table>"
@@ -2248,6 +2278,53 @@
    "source": [
     "integerQueue"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### `PriorityQueue<TElement,TPriority>`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
