modified:   16. Linear Data Structures/Built-In Classes/The Queue and Priority Queue Classes.ipynb

--- a/16. Linear Data Structures/Built-In Classes/The Queue and Priority Queue Classes.ipynb
+++ b/16. Linear Data Structures/Built-In Classes/The Queue and Priority Queue Classes.ipynb
@@ -1078,7 +1078,7 @@
     }
    },
    "source": [
-    "If we want to retrieve the element that is currently designated as the **Head** of the `integerQueue`, without removing it, we can do so as follows:"
+    "If we want to retrieve the element that is currently designated as the **Front** of the `integerQueue`, without removing it, we can do so as follows:"
    ]
   },
   {
@@ -1228,7 +1228,7 @@
     }
    },
    "source": [
-    "Conversely, should we desire to remove and return the element currently designated as the **Tail** of the `integerQueue`, we may proceed as follows:"
+    "Conversely, should we desire to remove and return the element currently designated as the **Front** of the `integerQueue`, we may proceed as follows:"
    ]
   },
   {
@@ -4043,6 +4043,13 @@
      {
       "aliases": [],
       "name": "csharp"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "languageName": null,
+      "name": "vscode"
      }
     ]
    }
