modified:   16. Linear Data Structures/Built-In Classes/The Queue and Priority Queue Classes.ipynb

--- a/16. Linear Data Structures/Built-In Classes/The Queue and Priority Queue Classes.ipynb
+++ b/16. Linear Data Structures/Built-In Classes/The Queue and Priority Queue Classes.ipynb
@@ -1906,6 +1906,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
@@ -1916,7 +1917,7 @@
     }
    },
    "source": [
-    "Now, let's reattempt to use the `TryPeek()` and `TryPop()` methods, where we will discover that their respective return values are now `true`, and that their given `out` argument variables will now store their respective **Top** element values accordingly."
+    "Now, let's reattempt to use the `TryPeek()` and `TryPop()` methods, where we will discover that their respective return values are now `true`, and that their given `out` argument variables will now store their respective **Front** element values accordingly."
    ]
   },
   {
@@ -3529,6 +3530,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
@@ -3539,7 +3541,7 @@
     }
    },
    "source": [
-    "Now, let's reattempt to use the `TryPeek()` and `TryPop()` methods, where we will discover that their respective return values are now `true`, and that their given `out` argument variables will now store their respective **Top** element values accordingly."
+    "Now, let's reattempt to use the `TryPeek()` and `TryPop()` methods, where we will discover that their respective return values are now `true`, and that their given `out` argument variables will now store their respective **minimal prioritized** element values accordingly."
    ]
   },
   {
