--- a/16. Linear Data Structures/Built-In Classes/The Stack Class.ipynb
+++ b/16. Linear Data Structures/Built-In Classes/The Stack Class.ipynb
@@ -2065,8 +2065,19 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [],
+      "aliases": [
+       "c#",
+       "C#"
+      ],
+      "languageName": "C#",
       "name": "csharp"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "languageName": null,
+      "name": "vscode"
      }
     ]
    }
