modified:   16. Linear Data Structures/Built-In Classes/The Queue and Priority Queue Classes.ipynb

--- a/16. Linear Data Structures/Built-In Classes/The Queue and Priority Queue Classes.ipynb
+++ b/16. Linear Data Structures/Built-In Classes/The Queue and Priority Queue Classes.ipynb
@@ -3989,7 +3989,13 @@
     {
      "data": {
       "text/html": [
-       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><div class=\"dni-plaintext\"><pre>2</pre></div></td></tr><tr><td>1</td><td><div class=\"dni-plaintext\"><pre>3</pre></div></td></tr><tr><td>2</td><td><div class=\"dni-plaintext\"><pre>4</pre></div></td></tr><tr><td>3</td><td><div class=\"dni-plaintext\"><pre>5</pre></div></td></tr><tr><td>4</td><td><div class=\"dni-plaintext\"><pre>6</pre></div></td></tr><tr><td>5</td><td><div class=\"dni-plaintext\"><pre>7</pre></div></td></tr></tbody></table><style>\r\n",
+       "<table><thead><tr><th>Count</th><th>Comparer</th><th>UnorderedItems</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>6</pre></div></td><td><div class=\"dni-plaintext\"><pre>System.Collections.Generic.GenericComparer`1[System.Int32]</pre></div></td><td><div class=\"dni-plaintext\"><pre>UnorderedItemsCollection\r\n",
+       "( 6, 2 )\r\n",
+       "( 5, 3 )\r\n",
+       "( 2, 6 )\r\n",
+       "( 3, 5 )\r\n",
+       "( 4, 4 )\r\n",
+       "( 1, 7 )</pre></div></td></tr></tbody></table><style>\r\n",
        ".dni-code-hint {\r\n",
        "    font-style: italic;\r\n",
        "    overflow: hidden;\r\n",
