modified:   09. Methods/Implementation/An Overview.ipynb modified:   09. Methods/Invocation/Arguments.ipynb

--- a/09. Methods/Implementation/An Overview.ipynb
+++ b/09. Methods/Implementation/An Overview.ipynb
@@ -363,7 +363,8 @@
     }
    },
    "source": [
-    "A **block** of code we call a code that is placed between opening and closing curly brackets `{` and `}`.  \n",
+    "A **block** of code, as we call it, is placed between opening and closing curly brackets `{` and `}`.    \n",
+    "   \n",
     "If a variable is declared within a **block**, it is also called **local** (for this block).    \n",
     "Its area of *visibility* begins from the line where the variable is *declared*, and ends at the line where block’s *closing bracket* is."
    ]
