--- a/09. Methods/Invocation/Arguments.ipynb
+++ b/09. Methods/Invocation/Arguments.ipynb
@@ -651,6 +651,7 @@
     "\n",
     "    }\n",
     "\n",
+    "\n",
     "    // After all that,\n",
     "    // since it is now reasonable to assume that we have printed each Integer in Array,\n",
     "    // print the closing bracket of the array\n",
@@ -1537,7 +1538,7 @@
     }
    },
    "source": [
-    "A Method, that has a variable number of its arguments, can also have other parameters in its parameters list.   \n",
+    "A Method that has a variable number of its arguments can also have other parameters in its parameters list.   \n",
     "   \n",
     "The following code, for example, has as a first parameter an element of type `string`, and right after it there can be one or more parameters of type `int`:   \n",
     "\n",
