modified:   09. Methods/Declaration/Parameters.ipynb modified:   09. Methods/Invocation/Arguments.ipynb

--- a/09. Methods/Declaration/Parameters.ipynb
+++ b/09. Methods/Declaration/Parameters.ipynb
@@ -1150,6 +1150,104 @@
     "\n",
     "}"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### The `out` and `ref` Keywords"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "We learned from **value** and **reference** semantics that, whenever you pass something into a method as a parameter, the contents of the variable are copied. With **value** types, this meant we got a complete copy of the original data. For **reference** types, we got a copy of the reference, which was still pointing to the same object in the heap."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Methods have the option of **handing off the actual variable, rather than copying its contents**, by using the `ref` or `out` keyword.   \n",
+    "Doing this means that the called method is working with the exact same variable that existed in the calling method."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "This sort of creates the illusion that value types have been turned into reference types, and sort of takes reference types to the next level, where it feels like you’ve got a reference to a reference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public void DeclareVariablesUsingMethodParameters( out string valueTypeOutput, ref string referenceTypeOutput )\n",
+    "{\n",
+    "    valueTypeOutput = \"This variable was declared inside the parameterization of a Method Signature\";\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
@@ -1165,6 +1263,13 @@
      {
       "aliases": [],
       "name": "csharp"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "languageName": null,
+      "name": "vscode"
      }
     ]
    }
