--- a/09. Methods/Invocation/Arguments.ipynb
+++ b/09. Methods/Invocation/Arguments.ipynb
@@ -1856,6 +1856,7 @@
      },
      {
       "aliases": [],
+      "languageName": null,
       "name": ".NET"
      },
      {
@@ -1902,12 +1903,14 @@
      },
      {
       "aliases": [],
+      "languageName": null,
       "name": "value"
      },
      {
       "aliases": [
        "frontend"
       ],
+      "languageName": null,
       "name": "vscode"
      },
      {
